<resources>
    <string name="app_name">SportDash</string>
    <string name="start_page_name">MeSport</string>
    <string name="todaysprogress">today</string>
    <string name="weeksprogress">week</string>
    <string name="quest">quest of today</string>
    <string name="settings">S Ξ T T I N G S</string>
    <string name="select">S Ξ L Ξ C T</string>
    <string name="username">username</string>
    <string name="age">age</string>
    <string name="dashid">dashid</string>
    <string name="copy">copy</string>
    <string name="save">save</string>
    <string name="exit">exit</string>
    <string name="s_p_o_r_t_d_s_h">S P O R T D Λ S H</string>
    <string name="result">T R Λ C K</string>
    <string name="r_s_u_l_t_d_t_a_i_l_s">R Ξ S U L T D Ξ T Λ I L S</string>
    <string name="n_x_t">N Ξ X T</string>
    <string name="track">T R Λ C K</string>
    <string name="cancel">P Λ U S E</string>
    <string name="finish">F I N I S H</string>
    <string name="tip_track">closing the app wont kill tracking</string>
    <string name="_00_00">00:00</string>
    <string name="running">R U N N I N G</string>
    <string name="swimming">S W I M M I N G</string>
    <string name="walking">W Λ L K I N G</string>
    <string name="biking">B I K I N G</string>
    <string name="ballsport">B Λ L L S P O R T</string>
    <string name="climbing">C L I M B I N G</string>
    <string name="skiing">S K I I N G</string>
    <string name="workout">W O R K O U T</string>
    <string name="goal_x_minutes">next goal: 15 min</string>
    <string name="activity_running">Activity: running</string>
    <string name="set_activity">activity\n</string>
    <string name="start">S T Λ R T</string>
    <string name="session_length">Session length</string>
    <string name="_20_min">20 min</string>
    <string name="_0">0</string>
    <string name="enter_location">enter location</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="enter_note">enter note</string>
    <string name="how_much_power_have_you_used">How much power have you used?</string>
    <string name="activate_lock_n">activate lock\n↓</string>
    <string name="l_o_g_i_n">L O G I N</string>
    <string name="u_s_e_r_n_a_m_e">u s e r n a m e</string>
    <string name="e_m_a_i_l">e m a i l</string>
    <string name="email">email</string>
    <string name="p_a_s_s_w_o_r_d">p a s s w o r d</string>
    <string name="passsword">password</string>
    <string name="r_e_g_i_s_t_e_r">R Ξ G I S T Ξ R</string>
    <string name="or_signup_for_free">or SignUp for free</string>
    <string name="or_login">or login</string>
    <string name="welcome">W Ξ L C O M Ξ\nT O\nS P O R T D Λ S H</string>
    <string name="current_energy">Current Energy?</string>
    <string name="kg">kg</string>
    <string name="years">years</string>
    <string name="current_age">Current Age?</string>
    <string name="current_weight">Current Weight?</string>
    <string name="s_t_a_r_s_h_o_p">S T Λ R S H O P</string>
    <string name="t_r_a_i_n_i_n_g_s_p_l_a_n">T R Λ I N I N G S P L Λ N S</string>
    <string name="c_r_e_a_t_e_p_l_a_n">C R Ξ Λ T E P L Λ N</string>
    <string name="_3_5">3/5</string>
    <string name="last_used">LΛST USΞD</string>
    <string name="p_a_u_s_e">P Λ U S Ξ</string>
    <string name="element_name">element name</string>
    <string name="link_for_more_information_optional">link for more information (optional)</string>
    <string name="save_to_slot">SAVΞ TO SLOT</string>
    <string name="or_select">or select</string>
    <string name="create">create</string>
    <string name="e_l_e_m_e_n_t_s">E L Ξ M Ξ N T S</string>
    <string name="s_u_b_m_i_t">S U B M I T</string>
    <string name="seconds">seconds</string>
    <string name="_30">30</string>
    <string name="x">X</string>
    <string name="tap_on_any_slot_to_save_for_later">TΛP ON ΛNY SLOT TO SΛVE FOR LΛTΞR.</string>
    <string name="element_description">element description</string>
    <string name="slot">SLOT</string>
    <string name="or_get">or get</string>
    <string name="c_h_o_o_s_e_c_a_t_e_g_o_r_y">C H O O S Ξ C A T Ξ G O R Y</string>
    <string name="name">name*</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="info">INFO</string>
    <string name="g_u_i_d_e">G U I D Ξ</string>
    <string name="c_l_o_s_e_a_p_p">C L O S E A P P</string>
    <string name="s_p_o_r_t_d_a_s_h">S P O R T D A S H</string>
    <string name="selectBig">S Ξ L Ξ C T</string>
    <string name="loading">loading</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="delete"><![CDATA[<-]]></string>
    <string name="feed">SportDash Feed</string>
</resources>