<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/projectGrey"
    android:id="@+id/main"
    tools:context=".plans.run.ResultInfoActivity">

    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/r_s_u_l_t_d_t_a_i_l_s"
        android:textColor="@color/projectGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewEnergy"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewGood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewGood"
        app:srcCompat="@drawable/flash" />
    <TextView
        android:id="@+id/textViewHow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/projectGreen"
        android:padding="10dp"
        android:text="@string/how_much_power_have_you_used"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTop" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progressTint="@color/projectGreen"
        android:tickMarkTint="@color/black"
        android:foregroundTint="@color/projectGreen"
        android:max="5"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHow" />

    <TextView
        android:id="@+id/textViewGood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_5"
        android:layout_marginRight="5dp"
        android:textColor="@color/projectGreen"
        app:layout_constraintEnd_toStartOf="@+id/imageViewEnergy"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textViewMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/session_length"
        android:textColor="@color/projectGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGood" />

    <TextView
        android:id="@+id/textViewMinAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/_20_min"
        android:textColor="@color/projectGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMin" />

    <TextView
        android:id="@+id/textViewLocation"
        android:textColor="@color/projectGreen"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinAmount" />

    <EditText
        android:id="@+id/editTextTextPersonNameLocation"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:hint="@string/enter_location"
        android:textColor="@color/projectGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
        android:autofillHints="postalAddress" />

    <TextView
        android:id="@+id/textViewNotes"
        android:textColor="@color/projectGreen"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNameLocation" />

    <EditText
        android:id="@+id/editTextTextPersonNameNotes"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:hint="@string/enter_note"
        android:textColor="@color/projectGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotes"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="next"
        android:textColor="@color/projectGreen"
        android:text="@string/n_x_t"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>