<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/projectGrey"
    android:id="@+id/main"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/result"
        android:textColor="@color/projectGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/projectBlack"
        android:text="@string/running"
        android:onClick="nextRunning"
        android:background="@drawable/main_text_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTop" />
    <TextView
        android:id="@+id/textView2"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:onClick="nextSwimming"
        android:layout_height="wrap_content"
        android:textColor="@color/projectBlack"
        android:text="@string/swimming"
        android:background="@drawable/main_text_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />
    <TextView
        android:id="@+id/textView3"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:onClick="nextWalking"
        android:layout_height="wrap_content"
        android:textColor="@color/projectBlack"
        android:text="@string/walking"
        android:background="@drawable/main_text_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <TextView
        android:id="@+id/textView4"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:onClick="nextBike"
        android:textColor="@color/projectBlack"
        android:text="@string/biking"
        android:background="@drawable/main_text_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
    <TextView
        android:id="@+id/textView5"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:onClick="nextBall"
        android:textColor="@color/projectBlack"
        android:text="@string/ballsport"
        android:background="@drawable/main_text_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
    <TextView
        android:id="@+id/textView6"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/projectBlack"
        android:onClick="nextClimbing"
        android:text="@string/climbing"
        android:background="@drawable/main_text_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
    <TextView
        android:id="@+id/textView7"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/projectBlack"
        android:text="@string/skiing"
        android:onClick="nextSki"
        android:background="@drawable/main_text_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
    <TextView
        android:id="@+id/textView8"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/projectBlack"
        android:text="@string/workout"
        android:onClick="nextWorkout"
        android:background="@drawable/main_text_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_text_background_white"
        android:onClick="nextCustom"
        android:padding="10dp"
        android:text="@string/s_p_o_r_t_d_a_s_h"
        android:textColor="@color/projectBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextTextPersonNameElementCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_text_background"
        android:ems="10"
        android:hint="custom tracking"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/projectGreen"
        android:textColorHint="@color/projectGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="select"
        android:textColor="@color/projectGreen"
        android:rotation="-10"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:rotation="-10"
        android:text="or name"
        android:textColor="@color/projectGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textViewCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SET"
        android:textColor="@color/projectLightBlue"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:onClick="setCustom"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonNameElementCustom"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonNameElementCustom"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonNameElementCustom" />
</androidx.constraintlayout.widget.ConstraintLayout>