<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/projectGrey"
    tools:context=".settings.account.AccountActivity">

    <TextView
        android:elevation="2dp"
        android:padding="2dp"
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/projectGreen"
        android:text="@string/s_p_o_r_t_d_s_h"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Account"
        android:textColor="@color/black"
        android:textSize="60dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTop" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/username"
        android:textColor="@color/projectGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewApp" />

    <EditText
        android:id="@+id/editTextTextPersonNameUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_text_background"
        android:hint="new username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/projectGrey"
        app:layout_constraintEnd_toStartOf="@+id/textViewCopySave111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/age"
        android:textColor="@color/projectGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNameUsername" />

    <EditText
        android:id="@+id/editTextTextPersonNameAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_text_background"
        android:hint="new age"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/projectGrey"
        app:layout_constraintEnd_toStartOf="@+id/textViewCopySave11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="weight"
        android:textColor="@color/projectGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNameAge" />

    <EditText
        android:id="@+id/editTextTextPersonNameWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_text_background"
        android:hint="new weight"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/projectGrey"
        app:layout_constraintEnd_toStartOf="@+id/textViewCopySave1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

    <TextView
        android:id="@+id/textViewBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="bio / description"
        android:textColor="@color/projectGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNameWeight" />

    <EditText
        android:id="@+id/editTextTextPersonNameBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_text_background"
        android:hint="new bio"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/projectGrey"
        app:layout_constraintEnd_toStartOf="@+id/textViewCopySaveBio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBio" />

    <TextView
        android:id="@+id/textViewCopySaveBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveBio"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonNameBio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonNameBio" />

    <TextView
        android:id="@+id/textViewCopySave1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveWeight"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonNameWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonNameWeight" />

    <TextView
        android:id="@+id/textViewCopySave11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveAge"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonNameAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonNameAge" />

    <TextView
        android:id="@+id/textViewCopySave111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveUsername"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonNameUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonNameUsername" />

    <TextView
        android:id="@+id/textViewAboutInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="StarDash Account"
        android:textColor="@color/white"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCustomToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CUSTOM TOAST"
        android:padding="10dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:background="@drawable/main_text_background_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>